--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,7 @@
 		<link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#5bbad5" />
 		<meta name="msapplication-TileColor" content="#00cefe" />
 		<meta name="theme-color" content="#f8fafd" />
+		<meta name="google-site-verification" content="nc0pKffQdhm679g_eXEQhjK-NzBM8ZbyFQLR9ZMeJtc" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
