--- a/src/app.html
+++ b/src/app.html
@@ -16,6 +16,11 @@
 		<meta name="msapplication-TileColor" content="#00cefe" />
 		<meta name="theme-color" content="#f8fafd" />
 		<meta name="google-site-verification" content="nc0pKffQdhm679g_eXEQhjK-NzBM8ZbyFQLR9ZMeJtc" />
+		<script
+			defer
+			src="https://stats.alrico.es/script.js"
+			data-website-id="f38cdcf2-71ae-43ef-ab61-a865f2d66bb6"
+		></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
